<resources>
    <string name="search_hint">Search photo</string>
    <string name="app_name">Flickr tool</string>
    <string name="hint_username">Enter username</string>
    <string name="hint_email">Enter email</string>
    <string name="hint_password">Enter password</string>
    <string name="turn_on_geo">Please, turn on GPS</string>
    <string name="no_internet">No internet connection</string>
    <string name="button_login">Login</string>
    <string name="button_sign_in">Sign in</string>
    <string name="action_settings">Settings</string>
    <string name="button_cancel">Cancel</string>
    <!-- Strings used for fragments for navigation -->
    <string name="list_search_fragment_label">Search photo</string>
    <string name="favorites_fragment_label">Favorites</string>
    <string name="user_details_label">User details</string>
    <string name="login_fragment_label">Login</string>
    <string name="registration_fragment_label">Registration</string>
    <string name="detail_fragment_label">Photo detail</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="recent_photo">Recent photo</string>
    <string name="favorites">Favorites</string>
    <string name="search">Search</string>
    <string name="starr_off">Starr off</string>
    <string name="retry">Retry</string>
    <string name="no_results">No results</string>
    <string name="favorites_tag">Favorites fragment</string>
    <string name="settings_fragment_tag">Settings fragment</string>
    <string name="result_found_msg">results found for this query:</string>

    <!--    Facebook login credentials-->
    <string name="facebook_app_id">888088505090961</string> <string name="fb_login_protocol_scheme">fb888088505090961</string>

    <string name="welcome_back">Welcome back!</string>
    <string name="log_into_your_existing_account">Log in to your account</string>
    <string name="twitter">Twitter</string>
    <string name="facebook">Facebook</string>
    <string name="github">GitHub</string>
    <string name="google">Google</string>
    <string name="forgot_about">forgot about</string>
    <string name="previous_login">PREVIOUS LOGIN ?</string>

    <string name="internet_not_working">Uh..oh… We\'re unable proceed, its seems like your internet connection is broke or maybe limited. Please check it and try again.</string>
    <string name="cancel">Cancel</string>
    <string name="try_again">Try Again</string>
    <string name="limited_internet_connection">Limited Internet Connection</string>
    <string name="auth_user_collision_message">It seems like %1$s is already linked with the following login providers. Please select any of following provider in order to login with your previous information.</string>
    <string name="user_collision">User Collision</string>
    <string name="select">Select</string>
    <string name="operation_cancelled">Operation Cancelled</string>
    <string name="operation_cancelled_content">It seems like you cancel the on-going operation. You can restart the process by simply clicking Try Again.</string>
    <string name="logout">Logout</string>
    <string name="logout_txt">Logout</string>
    <string name="account_icon">Account_icon</string>
    <string name="registration_label">Registration</string>
    <string name="login_label">Login</string>
    <string name="inccorect_login">Invalid password or username</string>
    <string name="photo">Photo</string>

</resources>