<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalGuideLine_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalGuideLine_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalGuideLine_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <TextView
        android:id="@+id/fragment_label_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Registration "
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="@id/horizontalGuideLine_up" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userNameTIL"
        app:boxStrokeColor = "@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_32dp"
        android:layout_marginTop="@dimen/margin_32dp"
        android:layout_marginEnd="@dimen/margin_32dp"
        android:hint="@string/hint_username"
        app:layout_constraintStart_toStartOf="@id/verticalGuideLine_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_label_tv"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:shadowColor="@color/colorPrimary"
            android:outlineSpotShadowColor="@color/colorPrimary"
            android:textColorLink="@color/colorPrimary"
            android:inputType="text"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTIL"
        app:boxStrokeColor = "@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_32dp"
        android:layout_marginTop="@dimen/margin_32dp"
        android:layout_marginEnd="@dimen/margin_32dp"
        android:hint="@string/hint_email"
        app:layout_constraintStart_toStartOf="@id/verticalGuideLine_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userNameTIL"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:shadowColor="@color/colorPrimary"
            android:outlineSpotShadowColor="@color/colorPrimary"
            android:textColorLink="@color/colorPrimary"
            android:inputType="text"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_text_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_32dp"
        android:layout_marginEnd="@dimen/margin_32dp"
        android:hint="@string/hint_password"
        app:errorEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailTIL">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        app:layout_constraintStart_toStartOf="@id/verticalGuideLine_start"
        android:layout_marginTop="@dimen/margin_16dp"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:text="@string/login_label"
        app:layout_constraintTop_toTopOf="@id/sign_Btn"
        android:layout_height="wrap_content"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/margin_16dp"
        android:text="@string/button_sign_in"
        app:layout_constraintEnd_toEndOf="@id/password_text_input"
        app:layout_constraintTop_toBottomOf="@+id/password_text_input" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancel_BTN"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="6dp"
        android:layout_marginRight="12dp"
        android:text="@string/button_cancel"
        app:layout_constraintRight_toLeftOf="@+id/sign_Btn"
        app:layout_constraintTop_toBottomOf="@+id/password_text_input" />

</androidx.constraintlayout.widget.ConstraintLayout>