<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/listMyFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<!--    <com.google.android.material.appbar.MaterialToolbar-->
<!--        android:id="@+id/movie_toolbar"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:background="@color/purple_700"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:titleTextColor="@color/white">-->

<!--        <androidx.appcompat.widget.SearchView-->
<!--            android:id="@+id/movie_search"-->
<!--            style="@style/Widget.AppCompat.SearchView"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="end" />-->

<!--    </com.google.android.material.appbar.MaterialToolbar>-->
    <TextView
        android:id="@+id/infoTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16dp"
        android:layout_marginBottom="@dimen/margin_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginLeft="@dimen/margin_16dp"
        android:layout_marginTop="8dp"
        app:placeholderTextColor="@color/colorPrimary"
        app:counterOverflowTextColor="@color/colorPrimary"
        android:layout_marginEnd="@dimen/margin_16dp"
        android:layout_marginRight="@dimen/margin_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/infoTV">

        <EditText
            android:id="@+id/searchET"
            android:autofillHints="@android:string/copyUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionSearch"
            android:selectAllOnFocus="true"
            android:hint="@string/search_hint"
            android:textColor="@color/colorPrimary"
            android:inputType="textNoSuggestions"
             />
    </com.google.android.material.textfield.TextInputLayout>

    <!--    <EditText-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="@dimen/margin_16dp"-->
    <!--        android:layout_marginTop="@dimen/margin_16dp"-->
    <!--        android:layout_marginEnd="@dimen/margin_16dp"-->
    <!--        android:layout_marginBottom="@dimen/margin_16dp"-->
    <!--        android:hint="Search"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="@+id/infoTV" />-->

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listPhotoRv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_layout" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/retry_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retry"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/emptyList"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/no_results"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>